Fix suggestions alignment and submit button (fix #63)

--- a/src/scss/header-v2/_search.scss
+++ b/src/scss/header-v2/_search.scss
@@ -174,7 +174,7 @@
 		position: absolute;
 		left: 0;
 		right: 0;
-		top: 43px;
+		top: 45px;
 		border: 0;
 		background-color: #fcfcfc;
 		color: oColorsGetPaletteColor('grey-tint5');
